--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,6 +5,7 @@
       <li *ngIf="isLogin()"><button mat-button (click)="gotoSelect()">เลือกห้อง</button></li>
       <li *ngIf="isAdmin()"><button mat-button (click)="gotoRoom()">จัดการห้อง</button></li>
       <li *ngIf="isLogin()"><button mat-button (click)="gotoMain()">ซื้ออุปกรณ์</button></li>
+      <li *ngIf="isAdmin()"><button mat-button (click)="gotoBill()">จัดการบิลล์ค่าเสียหาย</button></li>
       <li *ngIf="isAdmin()"><button mat-button (click)="gotoPay()">แจ้งการชำระเงิน</button></li>
       <li *ngIf="isLogin()"><button mat-button (click)="signOut()">ออกจากระบบ</button></li>
     </ul>
