close#90 - ทำแก้ไข UI

--- a/frontend/src/app/course-reserve/course-reserve.component.html
+++ b/frontend/src/app/course-reserve/course-reserve.component.html
@@ -7,6 +7,10 @@
    </mat-form-field>
    &nbsp;&nbsp;&nbsp;&nbsp;
    <mat-form-field class="example-full-width">
+    <input matInput name="inputNameFacebook"  type="text" placeholder="ชื่อFacebook"  [(ngModel)]="inputNameFacebook" >
+  </mat-form-field>
+  &nbsp;&nbsp;&nbsp;&nbsp;
+   <mat-form-field class="example-full-width">
        <input matInput name="inputPhone"  type="text" placeholder="เบอร์ที่ใช้ติดต่อ"  [(ngModel)]="inputPhone" >
    </mat-form-field>
    &nbsp;&nbsp;&nbsp;&nbsp;
