--- a/frontend/src/app/checkmain/checkmain.component.css
+++ b/frontend/src/app/checkmain/checkmain.component.css
@@ -135,7 +135,7 @@ footer p {
   margin: 0px;
 
 }
-#box17{
+#box{
 width: 60%;
 height: 35px;
 border-radius: 5px;
@@ -148,7 +148,7 @@ padding-top: 7px;
   background-color: #BEBEBE;
   margin: 8px;
 }
-#box_17{
+#box_1{
   width: 80%;
   height: 35px;
   border-radius: 6px;
