--- a/frontend/src/app/checkmanager/checkmanager.component.html
+++ b/frontend/src/app/checkmanager/checkmanager.component.html
@@ -53,7 +53,8 @@
             <input matInput id="box_1" placeholder="Please enter your name" [(ngModel)]="setFix.managerName" name="managerName"><br><br>
             <label>ค่าใช้จ่าย / Cost</label><br>
             <input matInput id="box_1" placeholder="Please enter your phone number" [(ngModel)]="setFix.cost" name="cost"><br>
-
+            <br>
+            <p style="color: #red;">{{showError}}</p>
           </div>
           <div class="info113_area">
             <div class="button_area_foot">
