ทำการแก้ไข UI -close #106

--- a/frontend/src/app/product-show/product-show.component.html
+++ b/frontend/src/app/product-show/product-show.component.html
@@ -15,13 +15,13 @@
   </tr>
 
 
-  <tr *ngFor="let product of product">
+  <tr *ngFor="let addproduct of addproduct">
 
-      <td>{{product.id}}</td>
-      <td>{{product.nameproduct}}</td>
-      <td>{{product.number}}</td>
-      <td>{{product.price}}</td>
-      <td>{{product.saleprice}}</td> 
+      <td>{{addproduct.id}}</td>
+      <td>{{addproduct.nameproduct}}</td>
+      <td>{{addproduct.number}}</td>
+      <td>{{addproduct.price}}</td>
+      <td>{{addproduct.saleprice}}</td> 
     </tr>
 </table>
 </div>
