--- a/frontend/src/app/promotion/promotion.component.html
+++ b/frontend/src/app/promotion/promotion.component.html
@@ -1,4 +1,9 @@
-<br><br><br><br><br>
+<br><br>
+
+<div>
+  <button mat-button color="primary" class="example-mid-width" (click)="show()">SHOW-PROMOTION</button>
+</div>
+
 <h1 class="aa">PROMOTION</h1>
 <br>
 
@@ -51,5 +56,5 @@
 <br>
 
 <button mat-button color="primary" class="example-mid-width" (click)="insert()">SUBMIT</button> <br>
-<button mat-button color="primary" class="example-mid-width" (click)="show()">SHOW-PROMOTION</button>
+<!-- <button mat-button color="primary" class="example-mid-width" (click)="show()">SHOW-PROMOTION</button> -->
 <br><br>
