Up date Test Case to github - close#110

--- a/frontend/src/app/delivery3/delivery3.component.html
+++ b/frontend/src/app/delivery3/delivery3.component.html
@@ -57,7 +57,7 @@
             <input matInput id="box_1" placeholder="Please enter your email" [(ngModel)]="shopAdd.email" name="email"><br>
             <label>ที่อยู่ / Address</label><br>
             <input matInput id="box_1" placeholder="Please enter your address" [(ngModel)]="shopAdd.address" name="address"><br>
-
+            <br> <p style="color: #red;">{{showError}}</p>
           </div>
           <div class="info113_area">
             <div class="button_area_foot">
