--- a/frontend/src/app/comment/comment.component.html
+++ b/frontend/src/app/comment/comment.component.html
@@ -113,7 +113,7 @@
 
   <h3><p align = "center">โปรดกรอกสิ่งที่ควรปรับปรุง</p></h3>
   <p align ="center"><mat-form-field class="example-full-width">
-    <textarea matInput placeholder="กรอกความคิดเห็น" minlength="5"  maxlength="40"  id="positive" [(ngModel)]="review" ></textarea>
+    <textarea matInput placeholder="กรอกความคิดเห็น" minlength="5"  maxlength="40"  id="positiveng " [(ngModel)]="review" ></textarea>
   </mat-form-field></p><br>
 
   <p align = 'center'> <i class="fa fa-sign-in fa-lg fa-fw"></i><button mat-flat-button color="primary" (click)="insert()">Save</button></p>
