--- a/frontend/src/app/cashpay/cashpay.component.html
+++ b/frontend/src/app/cashpay/cashpay.component.html
@@ -28,9 +28,9 @@
 
   <h3><p align = "center">ชื่อ</p></h3>
   <p align ="center"><mat-form-field>
-    <mat-select   placeholder="โปรดใส่ชื่อ" [(ngModel)]="memberInfoSelect">
-      <mat-option *ngFor="let memberinfo of  memberinfos" [value]="memberinfo.id">
-        {{memberinfo.fname}}
+    <mat-select   placeholder="โปรดใส่ชื่อ" [(ngModel)]="memberSelect">
+      <mat-option *ngFor="let member of  members" [value]="member.id">
+        {{member.userName}}
       </mat-option>
     </mat-select>
   </mat-form-field></p>
@@ -48,7 +48,7 @@
 
   <h3><p align = "center">จำนวนเงินที่ได้รับ</p></h3>
   <p align="center"><mat-form-field class="example-full-width">
-    <input matInput placeholder="โปรดใส่จำนวนเงิน" [(ngModel)]="price">
+    <input matInput placeholder="โปรดใส่จำนวนเงิน" id="price2" [(ngModel)]="price">
   </mat-form-field></p>
 
   <h3><p align = "center">เลือกสถานะ</p></h3>
@@ -63,7 +63,7 @@
 
   <h3><p align = "center">ชื่อผู้รับ</p></h3>
   <p align="center"><mat-form-field class="example-full-width">
-    <input matInput placeholder="โปรดใส่ชื่อผู้รับ" [(ngModel)]="cashreceive">
+    <input matInput placeholder="โปรดใส่ชื่อผู้รับ" id="receive2" [(ngModel)]="cashreceive">
   </mat-form-field></p><br><br>
 
   <p align = 'center'> <i class="fa fa-sign-in fa-lg fa-fw"></i><button mat-flat-button color="primary" (click)="insert()">Save</button></p>
